Fix signup form dangling div and padding on mobile screens

--- a/airbitz/airbitz/static/airbitz-theme/scss-ab/custom.scss
+++ b/airbitz/airbitz/static/airbitz-theme/scss-ab/custom.scss
@@ -239,9 +239,23 @@ html {
             border: 1px solid #dddddd;
             padding: 20px 0;
 
+            @media(max-width: $screen-sm) {
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+
             h2 {
                 margin-bottom: 5px;
                 color: white;
+
+                @media(max-width: $screen-sm) {
+                    zoom: .75;
+                }
+            }
+            .submit-row {
+                @media(max-width: $screen-sm) {
+                    margin-left: 20px;
+                }
             }
         }
     }
